// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Width handles % value 1`] = `
{
  "classNames": [
    "root-literal",
  ],
  "variables": {
    "--rs-w-s": "50%",
  },
}
`;

exports[`Styles/Width handles px value 1`] = `
{
  "classNames": [
    "root-literal",
  ],
  "variables": {
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width handles responsive value 1`] = `
{
  "classNames": [
    "root-literal",
    "root-literal--l",
  ],
  "variables": {
    "--rs-w-l": "50%",
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width handles undefined value 1`] = `null`;

exports[`Styles/Width handles unit value 1`] = `
{
  "classNames": [
    "root-unit",
  ],
  "variables": {
    "--rs-w-s": 5,
  },
}
`;
